--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.19",
     "serve-static": "^1.14.1",
     "server-static": "^2.0.5",
     "vue": "^2.6.11",
