--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "geonames-vue",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,26 +12,25 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^0.28.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "core-js": "^3.6.5",
-    "express": "^4.18.2",
+    "axios": "^1.7.7",
+    "connect-history-api-fallback": "^2.0.0",
+    "core-js": "^3.37.1",
+    "express": "^4.21.1",
     "lodash": "^4.17.21",
-    "serve-static": "^1.14.1",
-    "server-static": "^2.0.5",
-    "vue": "^2.6.11",
-    "vue-axios": "^2.1.5",
+    "serve-static": "^1.16.2",
+    "vue": "^2.7.16",
+    "vue-axios": "^3.5.2",
     "vue-moment": "^4.1.0",
     "vuetable-2": "^2.0.0-beta.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/eslint-parser": "^7.25.9",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "vue-template-compiler": "^2.7.16"
   },
   "eslintConfig": {
     "root": true,
@@ -40,7 +42,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
